Fix T52134: New depsgraph crashes when evaluating several psys on from object